# PinocchioSql

./: .gitignore  CMakeLists.txt  README.md  pinocchioQB.cpp  pinocchioQB.h  querybuilder.cpp  querybuilder.h
